# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Id: $

  11 Oct 2007; Andrew Gaffney <agaffney@gentoo.org> catalyst:
  print an error saying what target failed before the traceback

  25 Sep 2007; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst_support.py:
  when parsing make.conf, first try pkgcore's
  snakeoil.fileutils.read_bash_dict(), then portage's
  portage_util.getconfig(), then the internal parse_makeconf()

  06 Sep 2007; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst_support.py:
  raise an exception in parse_spec() if there's a duplicate key in the spec

  06 Sep 2007; Andrew Gaffney <agaffney@gentoo.org>
  examples/netboot_template.spec, examples/tinderbox_template.spec,
  modules/grp_target.py, modules/tinderbox_target.py:
  remove redundant set_pkgcache_path() functions from tinderbox and grp modules
  remove extra pkgcache_path and kerncache_path options from example specs

  31 Aug 2007; Chris Gianelloni <wolf31o2@gentoo.org> catalyst:
  This is catalyst 2.0.5_pre3 for testing the new stages code.

  31 Aug 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-chroot.sh, targets/stage3/stage3-chroot.sh:
  We need to force USE=bindist on for building stages.

  29 Aug 2007; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  modules/generic_stage_target.py:
  Fixed livecd/volid by removing the string.join() from set_iso_volume_id()
  for bug #188099. This is catalyst 2.0.5_pre2 for testing.

  29 Aug 2007; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  targets/support/rc-update.sh:
  Added support for the newer versions of splashutils which use fbcondecor as
  the init script. This is catalyst 2.0.5_pre1 for testing.

  29 Aug 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/livecd-stage2/livecd-stage2-controller.sh:
  Make sure we mkdir on /etc/X11/xinit before we put files in it for bug
  #178289.

  22 Aug 2007; Andrew Gaffney <agaffney@gentoo.org>